# mtm_final

./: CMakeLists.txt  Exceptions.h  GCALC  Graph_wrap.cxx  Makefile  MyTestIn.txt  MyTestOut.txt  README.md  cheack_functions.cpp  cheack_functions.h  commends.cpp  commends.h  danibondar.gf  evaluator.cpp  evaluator.h  g1.cg  gcalc.cpp  gcalc.h  graph.cpp  graph.h  graph.i  graph.py  gur_input.txt  gur_output.txt  gur_test.txt  input_stream.cpp  input_stream.h  input_test.txt  intersection.gf  main.cpp  makefile2  outfile.txt  outfile_gur.txt  output_test.txt  parse_string.cpp  parse_string.h  python_interface.cpp  python_interface.h  reader.cpp  reader.h  (+6 more)
gcalc 2/: Makefile  test_in.txt
